# uni-xervo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  TESTING.md  build.rs
.config/: nextest.toml
.github/workflows/: ci.yml  publish.yml  website-pages.yml
benches/: runtime_bench.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  TEST_MATRIX.md  USER_GUIDE.md  first-spec.md
examples/: hybrid_local.rs  quick_start.rs
schemas/: model-catalog.schema.json
schemas/provider-options/: anthropic.schema.json  azure-openai.schema.json  candle.schema.json  cohere.schema.json  fastembed.schema.json  gemini.schema.json  mistral.schema.json  mistralrs.schema.json  openai.schema.json  vertexai.schema.json  voyageai.schema.json
scripts/: build.sh  doc.sh  test-integration.sh  test.sh
src/: api.rs  cache.rs  error.rs  lib.rs  mock.rs  options_validation.rs  provider.rs  reliability.rs  runtime.rs  traits.rs
src/provider/: anthropic.rs  azure_openai.rs  candle.rs  cohere.rs  fastembed.rs  gemini.rs  mistral.rs  mistralrs.rs  openai.rs  remote_common.rs  vertexai.rs  voyageai.rs
tests/: api_validation_test.rs  deduplication_test.rs  embedding_model_test.rs  error_handling_test.rs  generator_model_test.rs  integration_test.rs  options_validation_anthropic_test.rs  options_validation_azure_openai_test.rs  options_validation_cohere_test.rs  options_validation_mistral_test.rs  options_validation_mistralrs_test.rs  options_validation_test.rs  options_validation_vertexai_test.rs  options_validation_voyageai_test.rs  provider_capability_test.rs  real_providers_test.rs  reliability_test.rs  reranker_model_test.rs  runtime_lifecycle_test.rs  warmup_policy_test.rs
tests/common/: mock_support.rs  mod.rs
website/: README.md  mkdocs.yml  pyproject.toml
website/docs/: index.md
website/docs/assets/javascripts/: mermaid-init.js
website/docs/assets/stylesheets/: theme.css
website/docs/concepts/: index.md  model-catalog.md  reliability.md  runtime-loading.md
website/docs/getting-started/: cli-reference.md  index.md  installation.md  quickstart.md
website/docs/guides/: config-validation.md  index.md  multimodal-generation.md  provider-selection.md
website/docs/internals/: architecture.md  index.md
website/docs/reference/: configuration.md  errors.md  feature-flags.md  index.md
website/docs/reference/providers/: anthropic.md  azure-openai.md  candle.md  cohere.md  fastembed.md  gemini.md  index.md  mistral.md  mistralrs.md  openai.md  vertexai.md  voyageai.md
